--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "eslint": "^8.17.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "yarn": "^1.22.19",
@@ -30,6 +31,8 @@
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "angular-cli-ghpages": "^1.0.0",
     "autoprefixer": "^10.4.7",
     "jasmine-core": "~4.0.0",
