--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "^14.0.2",
     "@angular/platform-browser-dynamic": "^14.0.2",
     "@angular/router": "^14.0.2",
+    "@fortawesome/angular-fontawesome": "0.11.x",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "eslint": "^8.17.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
