--- a/angular.json
+++ b/angular.json
@@ -101,7 +101,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/marked/marked.min.js"
+            ]
           }
         },
         "deploy": {
