--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,5 +26,4 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: yarn build
