--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,9 +5,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "development" branch
   push:
-    # branches: [ "development" ]
-    # Publish semver tags as releases.
-    tags: ["v*.*.*"]
+  # branches: [ "development" ]
+  # Publish semver tags as releases.
+  # tags: ["v*.*.*"]
   # pull_request:
   #   branches: [ "development" ]
 
