--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,12 +1,12 @@
-# This is a basic workflow to help you get started with Actions
 name: docker
 
 # Controls when the workflow will run
 on:
-  workflow_run:
-    workflows: [Angular build]
-    types:
-      - completed
+  push:
+  # workflow_run:
+  #   workflows: [Angular build]
+  #   types:
+  #     - completed
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
