Reverts to workflow run

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -2,11 +2,10 @@ name: docker
 
 # Controls when the workflow will run
 on:
-  push:
-  # workflow_run:
-  #   workflows: [Angular build]
-  #   types:
-  #     - completed
+  workflow_run:
+    workflows: [Angular build]
+    types:
+      - completed
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
