--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -128,3 +128,12 @@ jobs:
         # This step uses the identity token to provision an ephemeral certificate
         # against the sigstore community Fulcio instance.
         run: cosign sign ${{ steps.meta.outputs.tags }}@${{ steps.build-and-push.outputs.digest }}
+
+  deploy:
+    needs: build-and-tag-docker
+    runs-on: ubuntu-latest
+    env:
+      KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+    steps:
+      - name: Check config data
+        run: echo ${{KUBE_CONFIG_DATA}}
