--- a/helm/ckm-website-frontend/templates/serviceaccount.yaml
+++ b/helm/ckm-website-frontend/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "photography-website-frontend.serviceAccountName" . }}
+  name: {{ include "ckm-website-frontend.serviceAccountName" . }}
   labels:
-    {{- include "photography-website-frontend.labels" . | nindent 4 }}
+    {{- include "ckm-website-frontend.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
