--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -132,6 +132,9 @@ jobs:
   deploy:
     needs: build-and-tag-docker
     runs-on: ubuntu-latest
+    permissions:
+      packages: read
+
     env:
       KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
     steps:
