--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,9 +4,9 @@ name: build
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
-  OWNER: ${{github.repository%/*}}
+  OWNER: therkal
   # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{github.repository#*/}}
+  IMAGE_NAME: ${{github.event.repository.name}}
 
 # Controls when the workflow will run
 on:
@@ -103,7 +103,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ env.OWNER }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.OWNER}}/${{ env.IMAGE_NAME }}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
