--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,19 +4,18 @@ name: build
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
-  OWNER: therkal
-  # github.repository as <account>/<repo>
+  OWNER: ${{ github.actor }}
   IMAGE_NAME: ${{github.event.repository.name}}
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "development" branch
   push:
-  # branches: [ "development" ]
-  # Publish semver tags as releases.
-  # tags: ["v*.*.*"]
-  # pull_request:
-  #   branches: [ "development" ]
+    branches: ["development", "main"]
+    # Publish semver tags as releases.
+    tags: ["v*.*.*"]
+  pull_request:
+    branches: ["development", "main"]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -85,7 +84,7 @@ jobs:
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
       - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
+        uses: docker/setup-buildx-action@v2
 
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
@@ -103,7 +102,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ env.OWNER}}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.OWNER }}/${{ env.IMAGE_NAME }}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
