--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,8 +18,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: "0"
 
       # Sets up Node.js
       - name: Use Node.js
@@ -39,13 +37,13 @@ jobs:
           path: ./dist
 
       - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@1.13.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        id: bump_version
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Test version bump_version
-        run: echo ${{ steps.bump_version.outputs.new_tag }}
+      - name: Test
+        run: echo ${{ steps.tag_version.outputs.new_tag }}
 
   lint:
     runs-on: ubuntu-latest
@@ -66,7 +64,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     env:
-      APP_VERSION: ${{ needs.build.bump_version.outputs.new_tag }}
+      APP_VERSION: ${{ needs.build.tag_version.outputs.new_tag }}
     permissions:
       # This is used to complete the identity challenge
       # with sigstore/fulcio when running outside of PRs.
@@ -142,11 +140,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: deploy to cluster
-        uses: wahyd4/kubectl-helm-action@master
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-          HELM_FILE_BASE_PATH: ./helm/${{ env.IMAGE_NAME }}
-        with:
-          args: |
-            helm upgrade --install ${{ env.IMAGE_NAME }} ${{ ENV.HELM_FILE_BASE_PATH }} -f ${{ENV.HELM_FILE_BASE_PATH}}/values.yaml --set image.tag=${{needs.build-and-tag-docker.env.APP_VERSION}}
+      - run: echo ${{needs.build-and-tag-docker.env.APP_VERSION}}
+      # - name: deploy to cluster
+      #   uses: wahyd4/kubectl-helm-action@master
+      #   env:
+      #     KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+      #     HELM_FILE_BASE_PATH: ./helm/${{ env.IMAGE_NAME }}
+      #   with:
+      #     args: |
+      #       helm upgrade --install ${{ env.IMAGE_NAME }} ${{ ENV.HELM_FILE_BASE_PATH }} -f ${{ENV.HELM_FILE_BASE_PATH}}/values.yaml --set image.tag=${{needs.build-and-tag-docker.env.APP_VERSION}}
