Adds lint to build job

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,10 +31,17 @@ jobs:
       - name: Build Angular project
         run: yarn build
 
-      - uses: actions/upload-artifact@master
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          name: Built Application
-          path: ./dist
+          node-version: "16.x"
 
-    outputs:
-      APP_VERSION: ${{ steps.tag_version.outputs.new_tag }}
+      - name: Install dependencies
+        run: yarn
+
+      - name: Yarn lint
+        run: yarn lint
