--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: deploy-to-k8s
+name: build
 
 env:
   # Use docker.io for Docker Hub if empty
