--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,6 +9,10 @@ env:
 
 on:
   push:
+    branches:
+      - "*"
+      - "!development"
+      - "!main"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
