fix(k8s-deployment): fix release branches to get cleaner versions.

--- a/.github/workflows/build-to-k8s.yaml
+++ b/.github/workflows/build-to-k8s.yaml
@@ -40,7 +40,7 @@ jobs:
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.0
         with:
-          release_branches: "main, development, hotfix/*, release/*"
+          release_branches: "main,hotfix/*,release/*"
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
     outputs:
