--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: build
+name: build-ckm-website-frontend
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -10,7 +10,7 @@ env:
 on:
   push:
     branches:
-      - "*"
+      - "**"
       - "!development"
       - "!main"
 
