--- a/helm/ckm-website-frontend/values.yaml
+++ b/helm/ckm-website-frontend/values.yaml
@@ -40,17 +40,17 @@ securityContext:
 
 service:
   type: ClusterIP
-  port: 80
+  port: 8080
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
   annotations:
     {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: 150.136.4.178
       paths:
         - path: /
           pathType: ImplementationSpecific
