--- a/helm/ckm-website-frontend/values.yaml
+++ b/helm/ckm-website-frontend/values.yaml
@@ -40,24 +40,23 @@ securityContext:
 
 service:
   type: ClusterIP
-  port: 8080
+  port: 80
 
 ingress:
-  enabled: false
-  className: ""
+  enabled: true
   annotations:
-    {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: traefik
+    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
   hosts:
-    paths:
-      - path: /
-        pathType: ImplementationSpecific
-        backend:
-          service:
-            name: ckm-website-frontend
-            port:
-              number: 8080
+    - host: ckm.indigo-it.nl
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+          backend:
+            service:
+              name: ckm-website-frontend
+              port:
+                number: 80
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
