--- a/.github/workflows/build-to-k8s.yaml
+++ b/.github/workflows/build-to-k8s.yaml
@@ -9,7 +9,7 @@ env:
 
 on:
   push:
-    # branches: ["development", "main"]
+    branches: ["development", "main"]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -47,19 +47,19 @@ jobs:
       APP_VERSION: ${{ steps.tag_version.outputs.new_tag }}
       APP_CHANGELOG: ${{ steps.tag_version.outputs.changelog }}
 
-  # create-release:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     APP_VERSION: ${{ needs.build.outputs.APP_VERSION }}
-  #     APP_CHANGELOG: ${{ needs.build.outputs.CHANGELOG }}
-  #   steps:
-  #     - name: Create a GitHub release
-  #       uses: ncipollo/release-action@v1
-  #       with:
-  #         tag: ${{ env.APP_VERSION }}
-  #         name: Release ${{ env.APP_VERSION }}
-  #         body: ${{ env.APP_CHANGELOG }}
+  create-release:
+    needs: build
+    runs-on: ubuntu-latest
+    env:
+      APP_VERSION: ${{ needs.build.outputs.APP_VERSION }}
+      APP_CHANGELOG: ${{ needs.build.outputs.CHANGELOG }}
+    steps:
+      - name: Create a GitHub release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ env.APP_VERSION }}
+          name: Release ${{ env.APP_VERSION }}
+          body: ${{ env.APP_CHANGELOG }}
 
   build-and-tag-docker:
     needs: build
