fix(k8s-deployment): Fix k8s deployment namespace and creates ingress for front-end
* Changes NGINX port and service port definitions

* Updates Ingress values

* Removes host field from ingress for now

* Removes automatic ingress creation for now

* Updates ingress values

* Empty host field

* Deploy 3 instances of the front-end by default

* Adds Prefix as path type

* Replicates front-end once

--- a/.github/workflows/build-to-k8s.yaml
+++ b/.github/workflows/build-to-k8s.yaml
@@ -47,7 +47,7 @@ jobs:
       APP_VERSION: ${{ steps.tag_version.outputs.new_tag }}
       APP_CHANGELOG: ${{ steps.tag_version.outputs.changelog }}
 
-  tag-commit:
+  create-release:
     needs: build
     runs-on: ubuntu-latest
     env:
@@ -150,4 +150,4 @@ jobs:
           HELM_FILE_BASE_PATH: ./helm/${{ env.IMAGE_NAME }}
         with:
           args: |
-            helm upgrade --install ${{ env.IMAGE_NAME }} ${{ ENV.HELM_FILE_BASE_PATH }} -f ${{ENV.HELM_FILE_BASE_PATH}}/values.yaml --set image.tag=${{ env.APP_VERSION }}
+            helm upgrade --install ${{ env.IMAGE_NAME }} ${{ ENV.HELM_FILE_BASE_PATH }} -f ${{ENV.HELM_FILE_BASE_PATH}}/values.yaml --set image.tag=${{ env.APP_VERSION }} --namespace production
