--- a/helm/ckm-website-frontend/values.yaml
+++ b/helm/ckm-website-frontend/values.yaml
@@ -43,17 +43,20 @@ service:
   port: 80
 
 ingress:
-  enabled: false
-  className: ""
+  enabled: true
   annotations:
-    {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: traefik
+    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
   hosts:
-    - host: chart-example.local
+    - host:
       paths:
         - path: /
-          pathType: ImplementationSpecific
+          pathType: Prefix
+          backend:
+            service:
+              name: ckm-website-frontend
+              port:
+                number: 80
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
